[Feature #161865937] Integrate admin products page with products GET endpoint

--- a/dashboard-admin.html
+++ b/dashboard-admin.html
@@ -37,6 +37,11 @@
                 <div class="dash-component-title">Records</div>
                 <div class="dash-component-help">View All Sales Records.</div>
             </div>
+            <div class="dash-component" onclick="location.href='categories-admin.html';">
+                <div class="dash-component-icon"><img src="images/list.png"></div>
+                <div class="dash-component-title">Categories</div>
+                <div class="dash-component-help">Manage Categories.</div>
+            </div>
 
         </div>
     </div>
