[Feature #161865937] Integrate update product button with products PUT endpoint

--- a/product-detail-admin.html
+++ b/product-detail-admin.html
@@ -43,7 +43,8 @@
                     <label for="p_category" class="my-form-extra">Category:</label>
                     <input type="text" value="400" id="p_category">
                     <div class="product-options">
-                        <button type="button" value="Submit">Update</button>
+                        <button type="button" value="Submit"
+                                onclick="updateProduct()">Update</button>
                         <button type="button" value="Submit">Delete</button>
                     </div>
                 </div>
@@ -60,6 +61,7 @@
             <div>Back to Products</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
