[Feature #161865937] Integrate delete product button with products DELETE endpoint

--- a/product-detail-admin.html
+++ b/product-detail-admin.html
@@ -45,7 +45,8 @@
                     <div class="product-options">
                         <button type="button" value="Submit"
                                 onclick="updateProduct()">Update</button>
-                        <button type="button" value="Submit">Delete</button>
+                        <button type="button" value="Submit"
+                                onclick="deleteProduct()">Delete</button>
                     </div>
                 </div>
             </form>
