[Feature #161865937] Integrate create attendant page with users POST endpoint

--- a/new-attendant.html
+++ b/new-attendant.html
@@ -36,7 +36,8 @@
 
 
                     <div class="product-options">
-                        <button onclick="addAttendant()">Create Attendant</button>
+                        <button type="button" value="Submit"
+                                onclick="addAttendant()">Create Attendant</button>
                     </div>
                 </div>
             </form>
