--- a/cart.html
+++ b/cart.html
@@ -17,7 +17,7 @@
         <!--<div class="nav-menu-item">Profile</div>-->
         <!--<div class="nav-menu-item">Records</div>-->
         <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
-        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
+        <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
 
