--- a/categories-admin.html
+++ b/categories-admin.html
@@ -14,7 +14,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
+        <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
 <!--# MAIN SECTION-->
@@ -30,17 +30,6 @@
             </div>
         </div>
         <div class="all-products-section" id="categories-list">
-            <!--<div class="product-item">-->
-                <!--&lt;!&ndash;<div class="product-image"><img src="images/shopping.png"></div>&ndash;&gt;-->
-                <!--<div class="product-details">-->
-                    <!--<div class="product-name">PlayStation 4</div>-->
-                    <!--<div class="product-details-extra">-->
-                        <!--<div class="product-price">Price: 40000</div>-->
-                        <!--<div class="product-price">In Stock: 30</div>-->
-                        <!--<div class="product-price">Minimum Stock: 10</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
         </div>
     </div>
     <div class="my-side-bar">
