--- a/attendant-profile.html
+++ b/attendant-profile.html
@@ -15,7 +15,7 @@
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
         <button type="submit" hidden>PROFILE</button>
-        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
+        <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
 
