--- a/dashboard-attendant.html
+++ b/dashboard-attendant.html
@@ -14,7 +14,7 @@
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
         <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
-        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
+        <button ttype="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
 
