--- a/new-attendant.html
+++ b/new-attendant.html
@@ -14,7 +14,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="submit" onclick="location.href='index.html';">LOG OUT</button>
+        <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
 
