[Feature #161865937] Add register button to index page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 <div class="nav-container">
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
+    <div class="nav-menu">
+        <button type="button" value="Submit"
+                onclick="location.href='register-admin.html';">REGISTER ADMIN</button>
+    </div>
 </div>
 
 <!--# MAIN SECTION-->
