--- a/dashboard-admin.html
+++ b/dashboard-admin.html
@@ -45,6 +45,7 @@
 
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
@@ -52,5 +53,6 @@
         &copy; Copyright 2018 Store Manager
     </footer>
 </div>
+<script src="js/app.js"></script>
 </body>
 </html>
