--- a/dashboard-attendant.html
+++ b/dashboard-attendant.html
@@ -41,6 +41,7 @@
 
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
@@ -48,5 +49,6 @@
         &copy; Copyright 2018 Store Manager
     </footer>
 </div>
+<script src="js/app.js"></script>
 </body>
 </html>
