[Chore #161923964] Fix logout unresponsive bug

--- a/all-attendants.html
+++ b/all-attendants.html
@@ -39,6 +39,7 @@
             <div>Create New Attendant</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
