--- a/attendant-detail-admin.html
+++ b/attendant-detail-admin.html
@@ -52,6 +52,7 @@
             <div>Back to Sale Attendants</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
