--- a/categories-admin.html
+++ b/categories-admin.html
@@ -52,6 +52,7 @@
             <div>Create New Category</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
