--- a/products-admin.html
+++ b/products-admin.html
@@ -51,6 +51,7 @@
             <div>Create New Product</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
