--- a/sale-records-admin.html
+++ b/sale-records-admin.html
@@ -36,6 +36,7 @@
             <div onclick="location.href='dashboard-admin.html';">Back to Dashboard</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
