--- a/sale-records-all.html
+++ b/sale-records-all.html
@@ -32,6 +32,7 @@
             <div>Back to Dashboard</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
