--- a/products.html
+++ b/products.html
@@ -50,6 +50,7 @@
             <div>Back to Dashboard</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
