--- a/sale-record-detail.html
+++ b/sale-record-detail.html
@@ -52,6 +52,7 @@
             <div>Back to Sale Records</div>
         </div>
     </div>
+    <div id="snackbar"></div>
 </div>
 <!--#FOOTER-->
 <div class="footer-content login-section footer-section">
