--- a/categories-admin.html
+++ b/categories-admin.html
@@ -14,6 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-admin.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='add-category.html';">NEW CATEGORY</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
@@ -30,26 +32,6 @@
             </div>
         </div>
         <div class="all-products-section" id="categories-list">
-        </div>
-    </div>
-    <div class="my-side-bar">
-        <div class="categories-section">
-            <div class="categories-title">Categories</div>
-            <div class="category-details">
-                <div class="category-items">Electronics</div>
-                <div class="category-items">Furniture</div>
-                <div class="category-items">Fashion</div>
-                <div class="category-items">Gaming</div>
-                <div class="category-items">Office</div>
-                <div class="category-items">Home Stuff</div>
-            </div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
-            <div>Back to Dashboard</div>
-        </div>
-
-        <div class="categories-section sidebar-option" onclick="location.href='add-category.html';">
-            <div>Create New Category</div>
         </div>
     </div>
     <div id="snackbar"></div>
