[Chore #161983331] Remove sidebar in admin views, transfer options to navbar

--- a/add-product.html
+++ b/add-product.html
@@ -14,6 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-admin.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='products-admin.html';">PRODUCTS</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
@@ -47,15 +49,6 @@
                     </div>
                 </div>
             </form>
-        </div>
-    </div>
-    <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
-            <div>Back to Dashboard</div>
-        </div>
-
-        <div class="categories-section sidebar-option" onclick="location.href='products-admin.html';">
-            <div>Back to Products</div>
         </div>
     </div>
     <div id="snackbar"></div>
