--- a/all-attendants.html
+++ b/all-attendants.html
@@ -13,13 +13,15 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-admin.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='new-attendant.html';">NEW ATTENDANT</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
 
 <!--# MAIN SECTION-->
 <div class="main-section">
-    <div class="records-section">
+    <div class="products-section">
         <div class="dash-header">Store Attendants</div>
         <div class="search-bar-section">
             <div class="my-search-input">
@@ -30,14 +32,6 @@
             </div>
         </div>
         <div class="record-items-section" id="my-users-list"></div>
-    </div>
-    <div class="my-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
-                <div>Back to Dashboard</div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='new-attendant.html';">
-            <div>Create New Attendant</div>
-        </div>
     </div>
     <div id="snackbar"></div>
 </div>
