[Chore #161983331] Remove sidebar, move options to navbar

--- a/attendant-detail-admin.html
+++ b/attendant-detail-admin.html
@@ -14,6 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-admin.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='all-attendants.html';">ATTENDANTS</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
@@ -42,14 +44,6 @@
                 <div><img src="images/money.png"></div>
                 <div class="info-text">Ksh 200000 Total</div>
             </div>
-        </div>
-    </div>
-    <div class="my-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
-            <div>Back to Dashboard</div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='all-attendants.html';">
-            <div>Back to Sale Attendants</div>
         </div>
     </div>
     <div id="snackbar"></div>
