--- a/attendant-profile.html
+++ b/attendant-profile.html
@@ -15,6 +15,8 @@
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
         <button type="submit" hidden>PROFILE</button>
+        <button type="button" value="Submit" onclick="location.href='dashboard-attendant.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='sale-records-all.html';">RECORDS</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
@@ -43,14 +45,6 @@
                 <div><img src="images/money.png"></div>
                 <div class="info-text">Ksh 200000 Total</div>
             </div>
-        </div>
-    </div>
-    <div class="my-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
-            <div>Back to Dashboard</div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='sale-records-all.html';">
-            <div>Back to Sale Records</div>
         </div>
     </div>
     <div id="snackbar"></div>
