--- a/cart.html
+++ b/cart.html
@@ -16,6 +16,8 @@
     <div class="nav-menu">
         <!--<div class="nav-menu-item">Profile</div>-->
         <!--<div class="nav-menu-item">Records</div>-->
+        <button type="button" value="Submit" onclick="location.href='dashboard-attendant.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='products.html';">PRODUCTS</button>
         <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
@@ -30,18 +32,6 @@
                 <button type="button" value="Submit" class="cart-checkout"
                         id="s-button" onclick="createSale()">Create Sale Record</button>
             </div>
-        </div>
-    </div>
-
-    <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
-            <div>Back to Dashboard</div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='products.html';">
-            <div>Back to Products</div>
-        </div>
-        <div class="categories-section sidebar-option">
-            <div>Clear Shopping Cart</div>
         </div>
     </div>
     <div id="snackbar"></div>
