--- a/category-detail.html
+++ b/category-detail.html
@@ -14,6 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-admin.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='categories-admin.html';">CATEGORIES</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
 </div>
@@ -37,16 +39,6 @@
                     </div>
                 </div>
             </form>
-        </div>
-    </div>
-
-    <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-admin.html';">
-            <div>Back to Dashboard</div>
-        </div>
-
-        <div class="categories-section sidebar-option" onclick="location.href='categories-admin.html';">
-            <div>Back to Categories</div>
         </div>
     </div>
     <div id="snackbar"></div>
