--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
-        <button type="button" value="Submit"
-                onclick="location.href='register-admin.html';">REGISTER ADMIN</button>
+        <button type="button" value="Submit" onclick="location.href='register-admin.html';">REGISTER ADMIN</button>
     </div>
 </div>
 
