--- a/product-detail.html
+++ b/product-detail.html
@@ -14,6 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-attendant.html';">DASHBOARD</button>
+        <button type="button" value="Submit" onclick="location.href='products.html';">PRODUCTS</button>
         <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
@@ -44,16 +46,6 @@
                     <button type="button" value="Submit" onclick="addToCart()">Add to Cart</button>
                 </div>
             </form>
-        </div>
-    </div>
-
-    <div class="my-side-bar product-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
-            <div>Back to Dashboard</div>
-        </div>
-
-        <div class="categories-section sidebar-option" onclick="location.href='products.html';">
-            <div>Back to Products</div>
         </div>
     </div>
     <div id="snackbar"></div>
