--- a/products.html
+++ b/products.html
@@ -14,6 +14,7 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="button" value="Submit" onclick="location.href='dashboard-attendant.html';">DASHBOARD</button>
         <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
@@ -32,22 +33,6 @@
             </div>
         </div>
         <div class="all-products-section" id="products-list">
-        </div>
-    </div>
-    <div class="my-side-bar">
-        <div class="categories-section">
-            <div class="categories-title">Categories</div>
-            <div class="category-details">
-                <div class="category-items">Electronics</div>
-                <div class="category-items">Furniture</div>
-                <div class="category-items">Fashion</div>
-                <div class="category-items">Gaming</div>
-                <div class="category-items">Office</div>
-                <div class="category-items">Home Stuff</div>
-            </div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
-            <div>Back to Dashboard</div>
         </div>
     </div>
     <div id="snackbar"></div>
