--- a/sale-record-detail.html
+++ b/sale-record-detail.html
@@ -14,6 +14,8 @@
     <div class="nav-logo"><img src="images/shopping-list.png"></div>
     <div class="nav-logo-text">STORE MANAGER</div>
     <div class="nav-menu">
+        <button type="submit" onclick="location.href='dashboard-attendant.html';">DASHBOARD</button>
+        <button type="submit" onclick="location.href='sale-records-all.html';">RECORDS</button>
         <button type="submit" onclick="location.href='attendant-profile.html';">PROFILE</button>
         <button type="button" value="Submit" onclick="logoutUser()">LOG OUT</button>
     </div>
@@ -42,14 +44,6 @@
             <div id="sale-detail-total"> Total Cost: 115000</div>
             <div id="sale-detail-attendant"> Attendant: John Quest</div>
             <div id="sale-detail-date"> Date: 25-10-2018</div>
-        </div>
-    </div>
-    <div class="my-side-bar">
-        <div class="categories-section sidebar-option" onclick="location.href='dashboard-attendant.html';">
-            <div>Back to Dashboard</div>
-        </div>
-        <div class="categories-section sidebar-option" onclick="location.href='sale-records-all.html';">
-            <div>Back to Sale Records</div>
         </div>
     </div>
     <div id="snackbar"></div>
