[Chore #161983331] Adjust display of items in small screens

--- a/sale-records-all.html
+++ b/sale-records-all.html
@@ -22,7 +22,7 @@
 
 <!--# MAIN SECTION-->
 <div class="main-section">
-    <div class="records-section">
+    <div class="products-section">
         <div class="dash-header">My Sale Records</div>
         <div class="record-items-section" id="sales-list">
 
