[Chore #161983331] Add id to load records in admin view

--- a/sale-records-admin.html
+++ b/sale-records-admin.html
@@ -30,7 +30,7 @@
                 <button type="submit" class="my-search-button">Filter</button>
             </div>
         </div>
-        <div class="record-items-section"></div>
+        <div class="record-items-section" id="sales-list"></div>
     </div>
     <div id="snackbar"></div>
 </div>
